<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="title_location">Locations</string>
    <string name="title_episode">Episodes</string>
    <string name="title_characters">Characters</string>

    <string name="choose_status">Choose status</string>
    <string name="status_alive">Alive</string>
    <string name="status_dead">Dead</string>

    <string name="choose_gender">Choose gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_genderless">Genderless</string>

    <string name="choose_specie">Choose specie</string>
    <string name="specie_human">Human</string>
    <string name="specie_alien">Alien</string>
    <string name="specie_humanoid">Humanoid</string>
    <string name="specie_poopybutthole">Poopybutthole</string>
    <string name="specie_mythological">Mythological</string>
    <string name="specie_animal">Animal</string>
    <string name="specie_robot">Robot</string>
    <string name="specie_disease">Disease</string>
    <string name="specie_cronenberg">Cronenberg</string>
    <string name="specie_planet">Planet</string>

    <string name="use_filters">Use filters</string>
    <string name="character_s_image">Character\'s image</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="specie">Specie</string>
    <string name="choose_type">Choose type</string>
    <string name="cluster">Cluster</string>
    <string name="space_station">Space Station</string>
    <string name="customs">Customs</string>
    <string name="quasar">Quasar</string>
    <string name="nightmare">Nightmare</string>
    <string name="death_star">Death Star</string>
    <string name="c_137">C-137</string>
    <string name="replacement">Replacement</string>
    <string name="c_500a">C-500A</string>
    <string name="j19_7">J19ζ7</string>
    <string name="eric_stoltz_mask">Eric Stoltz Mask</string>
    <string name="d716">D716</string>
    <string name="cromulon">Cromulon</string>
    <string name="k_83">K-83</string>
    <string name="testicle_monster">Testicle Monster</string>
    <string name="_5_126">5-126</string>
    <string name="post_apocalyptic">Post-Apocalyptic</string>
    <string name="fantasy">Fantasy</string>
    <string name="choose_dimension">Choose dimension</string>
    <string name="unknown">Unknown</string>
    <string name="base">Base</string>
    <string name="evil_rick_s_target">Evil Rick\'s Target</string>
    <string name="k_22">K-22</string>
    <string name="asteroid">Asteroid</string>
    <string name="alternative_reality">Alternative Reality</string>
    <string name="diegesis">Diegesis</string>
    <string name="woods">Woods</string>
    <string name="liquid">Liquid</string>
    <string name="convention">Convention</string>
    <string name="mount">Mount</string>
    <string name="quadrant">Quadrant</string>
    <string name="spa">Spa</string>
    <string name="machine">Machine</string>
    <string name="generated_world">Generated world</string>
    <string name="microverse">Microverse</string>
    <string name="tv">TV</string>
    <string name="resort">Resort</string>
    <string name="fantasy_town">Fantasy town</string>
    <string name="dream">Dream</string>
    <string name="dimension">Dimension</string>
    <string name="menagerie">Menagerie</string>
    <string name="game">Game</string>
    <string name="dwarf_planet">Dwarf planet</string>
    <string name="daycare">Daycare</string>
    <string name="teenyverse">Teenyverse</string>
    <string name="box">Box</string>
    <string name="spacecraft">Spacecraft</string>
    <string name="arcade">Arcade</string>
    <string name="reality">Reality</string>
    <string name="c_35">C-35</string>
    <string name="acid_plant">Acid plant</string>
    <string name="giant_telepathic_spiders">Giant Telepathic Spiders</string>
    <string name="d_99">D-99</string>
    <string name="d716_b">D716-B</string>
    <string name="d_716c">D-716C</string>
    <string name="j_22">J-22</string>
    <string name="pizza">Pizza</string>
    <string name="phone">Phone</string>
    <string name="fancist">Fancist</string>
    <string name="chair">Chair</string>
    <string name="tusk">Tusk</string>
    <string name="magic">Magic</string>
    <string name="wasp">Wasp</string>
    <string name="merged">Merged</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="clear_filters">Clear filters</string>
    <string name="dimension_cronenberg">Cronenberg</string>
    <string name="location_planet">Planet</string>
    <string name="no_results">No results</string>
    <string name="error">Nothing found</string>
    <string name="type">Type:</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="episode">Episode</string>

    <string name="image_of_character">Image of character</string>
    <string name="name_detail">Name: </string>
    <string name="status_detail">Status: </string>
    <string name="specie_detail">Specie: </string>
    <string name="type_detail">Type: </string>
    <string name="gender_detail">Gender: </string>
    <string name="origin_detail">Origin: </string>
    <string name="location_detail">Location: </string>
    <string name="episode_detail">Episode: </string>
    <string name="dimension_item">Dimension:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="air_date">Air date:</string>
    <string name="title_activity_ads">AdsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="description">Hi, my name is Alex! I am an beginner Android developer and this is my first app. You can support me by watching an ad or by making a donation. Thanks for your attention &#128522;</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-4307421774256699~8110844259</string>
    <!--<string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->
    <string name="level_text">Level %1$d</string>
    <string name="title_activity_ad">AdActivity</string>
    <string name="ads">Ads</string>
    <string name="about_me">About me</string>

</resources>