<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="character"
            type="com.alexilinskiy.rickandmortyapp.data.model.CharacterDTO" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageItemCharacter"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/character_s_image"
            android:scaleType="centerCrop"
            android:setImage="@{character.image}"
            android:src="@drawable/tenor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/name"
            android:text="@{character.name}"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintStart_toEndOf="@id/imageItemCharacter"
            app:layout_constraintTop_toTopOf="@id/imageItemCharacter" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:text="@{character.gender}"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintStart_toStartOf="@id/nameTextView"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/status"
            android:text="@{character.status}"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@id/genderTextView"
            app:layout_constraintTop_toBottomOf="@id/genderTextView" />

        <TextView
            android:id="@+id/specieTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/specie"
            android:text="@{character.species}"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@id/statusTextView"
            app:layout_constraintTop_toBottomOf="@id/statusTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>