<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nameEpisodeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:hint="@string/name"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/airDateEpisodeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/air_date"
        app:layout_constraintStart_toStartOf="@id/nameEpisodeItem"
        app:layout_constraintTop_toBottomOf="@+id/nameEpisodeItem" />

    <TextView
        android:id="@+id/numberEpisodeItem"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/episode"
        app:layout_constraintStart_toStartOf="@+id/airDateEpisodeItem"
        app:layout_constraintTop_toBottomOf="@+id/airDateEpisodeItem" />
</androidx.constraintlayout.widget.ConstraintLayout>