<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="character"
            type="com.example.rickandmortyapp.data.model.Character" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B7F46E">

        <ImageView
            android:id="@+id/imageItemCharacter"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/character_s_image"
            android:scaleType="centerCrop"
            android:src="@drawable/tenor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageItemCharacter" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintStart_toStartOf="@id/nameTextView"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@id/genderTextView"
            app:layout_constraintTop_toBottomOf="@id/genderTextView" />

        <TextView
            android:id="@+id/specieTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specie"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@id/statusTextView"
            app:layout_constraintTop_toBottomOf="@id/statusTextView" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            tools:layout_editor_absoluteX="138dp"
            tools:layout_editor_absoluteY="189dp" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="151dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>