<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="location"
            type="com.alexilinskiy.rickandmortyapp.data.model.LocationDTO" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/name"
            android:text="@{location.name}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:text="@{location.type}"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintStart_toStartOf="@id/nameTextView"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <TextView
            android:id="@+id/dimensionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dimension"
            android:text="@{location.dimension}"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintStart_toStartOf="@id/typeTextView"
            app:layout_constraintTop_toBottomOf="@id/typeTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>