<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.alexilinskiy.rickandmortyapp.ui.location.locationDetail.LocationDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.location.locationDetail.LocationDetailFragment">

            <TextView
                android:id="@+id/nameLocationDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/episode"
                android:layout_marginTop="24dp"
                android:text="@{viewmodel.locationDetailLiveData.name}"
                android:textSize="@dimen/textsize_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/typeLocationDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/type"
                android:textSize="@dimen/textsize_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameLocationDetail" />

            <TextView
                android:id="@+id/typeLocationDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@{viewmodel.locationDetailLiveData.type}"
                android:textSize="@dimen/textsize_24"
                app:layout_constraintBottom_toBottomOf="@+id/typeLocationDetailTextView"
                app:layout_constraintStart_toEndOf="@+id/typeLocationDetailTextView"
                app:layout_constraintTop_toTopOf="@+id/typeLocationDetailTextView" />

            <TextView
                android:id="@+id/dimensionLocationDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/dimension"
                android:textSize="@dimen/textsize_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/typeLocationDetailTextView" />

            <TextView
                android:id="@+id/dimensionLocationDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:singleLine="false"
                android:text="@{viewmodel.locationDetailLiveData.dimension}"
                android:textSize="@dimen/textsize_24"
                app:layout_constraintBottom_toBottomOf="@+id/dimensionLocationDetailTextView"
                app:layout_constraintStart_toEndOf="@+id/dimensionLocationDetailTextView"
                app:layout_constraintTop_toTopOf="@+id/dimensionLocationDetailTextView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/characterList"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@id/dimensionLocationDetailTextView"
                app:layout_constraintTop_toBottomOf="@id/dimensionLocationDetailTextView"
                tools:listitem="@layout/fragment_character_item_in_episode_and_location" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>